--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Mr.Ma's first website. I have a dream to dreamed.</title>
-		<link rel="icon" type="image/x-icon" href="../img/favicon.png">
-		<link rel="stylesheet" type="text/css" href="../css/main.css">
+		<link rel="icon" type="image/x-icon" href="img/favicon.png">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
 		<header>header</header>
 
 		<div class="main">
 			<div class="bg full">
-				<img class="bg_img" src="../img/bg.jpg">
+				<img class="bg_img" src="img/bg.jpg">
 			</div>
 
 			<div class="container main_center">
