--- a/index.html
+++ b/index.html
@@ -7,18 +7,47 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
-		<header>header</header>
+		<header class="clr">
+			<h3 class="greet">Welcome to a newbie's home.</h3>
+		</header>
 
-		<div class="main">
+		<div class="main full">
 			<div class="bg full">
 				<img class="bg_img" src="img/bg.jpg">
+				<h1 class="bg_words">Keep Coding.</h1>
 			</div>
 
-			<div class="container main_center">
+			<div class="container center">
+				<p class="title">There are some demos.</p>
+				<div class="lists">
+					<ul class="clr">
+						<li class="list list1">
+							<a class="name" href="html/virtual_fountain.html">
+								虚拟喷泉
+								<br>
+								<span class="demo_intro">一个模拟现实喷泉的小实例，未来可能加上随机颜色等功能。。</span>
+							</a>
+						</li>
 
+						<li class="list list2">
+							<a class="name" href="html/Airship_Fighting%20V0.5.html">
+								飞鹰空击
+								<br>
+								<span class="demo_intro">驾驶一架炫(la)酷(ji)的飞船打败敌人吧，该游戏仍在测试中……</span>
+							</a>
+						</li>
+
+						<li class="list list3">
+							<a class="name" href="##">
+								<br>
+								<span class="demo_intro">暂无</span>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 
-		<footer class="full">footer</footer>
+		<footer class="full"></footer>
 	</body>
 </html>
