--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                                 </div>
                             </a>
                         </li>
+
+                        <li class="list list4">
+                            <a class="list_cover" target="_blank" href="html/demos/web_app_test/pc页面手机端样式.html">
+                                <!--<img class="bg" src="img/ShiFengCN.jpg">-->
+
+                                <div class="name">
+                                    app页面仿制
+                                    <br>
+                                    <span class="demo_intro">（测试）app页面仿制……</span>
+                                </div>
+                            </a>
+                        </li>
 					</ul>
 				</div>
 			</div>
