--- a/html/demos/virtual_fountain/virtual_fountain.html
+++ b/html/demos/virtual_fountain/virtual_fountain.html
@@ -10,11 +10,13 @@
 	</head>
 	<body>
 		<canvas id="myCanvas" width="800" height="600"></canvas>
+        <span id="fps">0</span>
         <div id="changeColor">
             <input id="color" type="text" placeholder="请输入16位或RGB颜色">
-            <input id="colorOK" type="button" value="更换颜色">
+            <input id="colorOK" type="button" value="确定">
+            <input id="randomSingleColor" type="button" value="随机颜色">
             <br>
-            <input id="randomColor" type="button" value="随机颜色">
+            <input id="randomColor" type="button" value="颜色全随机">
         </div>
 	</body>
     <script src="js/vf.js"></script>
