--- a/html/demos/Airship_Fighting/Airship_Fighting V0.5.html
+++ b/html/demos/Airship_Fighting/Airship_Fighting V0.5.html
@@ -14,6 +14,8 @@
 		<div class="main clr">
 			<canvas id="myCanvas" width="600" height="600"></canvas>
 
+			<span id="fps"></span>
+
 			<div id="start">
 				<input class="button" id="startButton" type="button" value="开始游戏">
 				<input class="button" id="introButton" type="button" value="游戏说明">
@@ -25,7 +27,8 @@
 			</div>
 
 			<div id="gameInfo">
-				score: <span id="score"></span>
+				<p>Score: <span id="score">0</span></p>
+				<p>High Score：<span id="highScore">0</span></p>
 			</div>
 
 			<div id="gameIntro">
