--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <div id="weather">
     <span>今日天气：</span>
     <a id="weather_info" href="html/weather.html" target="_blank" title="点此处查看更多天气信息"></a>
-    <a class="weather_question" href="javascript:void(null)">显示有问题？</a>
+    <a class="weather_question" href="javascript:void(null)" title="点击显示解决方法">显示有问题？</a>
     <div class="question_info">
         <p>1. 检查网络连接是否正常。</p>
         <p>2. 请在浏览器链接窗口右侧选择“允许加载不安全的脚本”。</p>
